# Bifrost.jl

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Manifest.toml  Project.toml  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: Documenter.yml  manifest-guard.yml  release-manifest.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv
dev/examples/: index.html
dev/generators/: index.html
dev/mcm/: index.html
dev/path-geometry/: index.html
dev/usage/: index.html
docs/: Project.toml  generators.md  juliacall-demo.jl  juliacall-demo.py  make.jl  path-geometry.md  undocumented.jl  undocumented.md
docs/logo-candidates/: README.md
docs/src/: developing.md  examples.md  frame-and-gauge.md  generators.md  index.md  mcm.md  path-geometry.md  usage.md
julia-port/: demo-path-integral.jl  demo.jl  fiber-path-plot.jl  fiber-path.jl  path-integral.jl
julia-port/test/: runtests.jl  test_fiber_path.jl
previews/PR19/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
previews/PR35/: .documenter-siteinfo.json  index.html  search_index.js
previews/PR45/: .documenter-siteinfo.json  index.html
previews/PR53/: index.html  (+2 more)
src/: Bifrost.jl  bifrost.py  material-properties.jl  natural-constants.jl  path-integral.jl  wrapper.py
src/python/: pyproject.toml  wrapper.py
test/: cross-platform_tests.jl  demo-smallest.py  runtests.jl  test_bishop_frame.jl  test_dgd.jl  test_fiber_cross_section.jl  test_fiber_path.jl  test_fiber_path_generators.jl  test_fiber_path_modify.jl  test_fiber_path_pass3.jl  test_fiber_tension.jl  test_fiber_thermal.jl  test_juliacall.jl  test_material_properties.jl  test_mcm_compatability.jl  test_paddle_transfer.jl  test_path_geometry.jl  test_path_geometry_connector.jl  test_path_geometry_perturb.jl  test_path_integral.jl  test_silica_nonlinear.jl  test_solver_convergence.jl  test_twist_ellipticity.jl
(+241 files in other folders)
