[project]
name = "bifrost_py"
version = "1.0.0"
description = "BIFROST, a library for birefringence simulation in optical fiber."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "juliacall>=0.9.34",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bifrost_py"]
