[project]
name = "bifrost"
version = "0.1.0"
description = "Repo-local Python shim for driving BIFROST (a Julia birefringence simulator) via juliacall. Not a distributable Python package."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "juliacall>=0.9.34",
    "matplotlib>=3.8",
    "numpy>=1.26",
]
